# nfp-examples

./: .env.example  .eslintrc.cjs  .nfp-modules.json  MODULES.md  README.md  build.mjs  deploy.mjs  deploy.ts  package.json  tsconfig.json
app/: tsconfig.json  vite.config.ts
app/src/: App.svelte  Game.svelte  Grid.svelte  Listing.svelte  Lobby.svelte  Notifications.svelte  Summary.svelte  Wallet.svelte  app.less  def.less  env.d.ts  env.ts  global.less  main.ts  sprites.ts  stores.ts  vehicles.ts  webext-portal.ts
applibs/: rollup.config.ts
applibs/src/: interface.d.ts  interface.ts
applibs/src/storage/: main.ts
battleship/: .gitignore  .nfp-modules.json  MODULES.md  README.md  build.mjs  package.json  tsconfig.json
battleship/.github/workflows/: deploy-contract.yaml
battleship/app/: tsconfig.json  vite.config.ts
battleship/app/src/: App.svelte  Game.svelte  Grid.svelte  Lobby.svelte  graphics.ts  interface  main.ts  sprites.ts  stores.ts
battleship/applibs/src/: env.ts
battleship/bootloader/: rollup.config.ts
battleship/bootloader/src/: common.ts  env.ts
battleship/contract/: Cargo.toml  Makefile
battleship/contract/interface/: app.ts
battleship/contract/src/: battleship.rs  lib.rs  msg.rs  nfp.rs  snip52_crypto.rs  snip52_exec_query.rs  state.rs
battleship/media/: global.css
bootloader/: rollup.config.ts
bootloader/src/: _autoboot.ts  bootloader.ts  common.ts  env.ts  global.ts
contract/: Cargo.toml  Makefile  README.md  contract.wasm
contract/interface/: app.ts  channels.cddl
contract/src/: battleship.rs  contract.rs  lib.rs  msg.rs  msgs.rs  snip52_channel.rs  snip52_crypto.rs  snip52_exec_query.rs  snip52_signed_doc.rs  snip52_state.rs  state.rs  token.rs  unittest_nfp.rs
contract/types/: app.ts
media/: global.css  preview.html
