[package]
name = "snip821_reference_impl"
version = "1.0.0"
authors = ["@darwinzero", "bill wincer"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }
secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", rev = "0129d78f15461016ef64b1953ec4b505aacdcc78", default-features = false, features = ["storage", "serialization", "utils", "permit", "viewing-key", "crypto"] }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }
schemars = "0.8.12"
serde = { version = "1.0.154", default-features = false, features = ["derive"] }
bincode2 = "2.0.1"
base64 = "0.21.0"
primitive-types = { version = "0.12.1", default-features = false }
cosmwasm-schema = { version = "1.2.2" }

# [dev-dependencies]
# cosmwasm-schema = { version = "1.2.2" }

[[bin]]
name = "schema"
required-features = ["schema"]